FIX: In a text, when no timestamp is defined the speech is vertically aligned with its speaker.

--- a/_attachments/main.css
+++ b/_attachments/main.css
@@ -35,10 +35,10 @@ th {
 
 div.timestamp {
   background-color: LightGray;
+  margin-bottom: 6px;
 }
 
 div.post {
-  padding-top: 6px;
   padding-bottom: 6px;
 }
 
